--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,22 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+.Link {
+  background-color: rgb(61, 60, 60);
+  color: white;
+  padding: 0.5em 0.5em;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+
+.Link:hover {
+  background-color: rgb(131, 129, 129);
+}
+
+.Link:active {
+  background-color: black;
+}
 
 .signInContainer {
   max-width: 500px;
