--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,23 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+.container{
+  padding: 10px;
+}
+.card{
+  height: 50%;
+  margin: 5px;
+}
+.myButton{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+.NavLogo:hover {
+  color: #e3e6e3;
+  font-weight: bold;
+
+}
 .Link {
   background-color: rgb(61, 60, 60);
   color: white;
@@ -38,17 +55,7 @@ body {
 
 .signUpContainer {
   max-width: 500px;
-  margin: 30px auto;
-  overflow: auto;
-  min-height: 500px;
-  border: 1px solid grey;
-  padding: 30px;
-  border-radius: 5px;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 30px auto;
+  margin: 10px auto;
   overflow: auto;
   min-height: 500px;
   border: 1px solid grey;
@@ -145,4 +152,35 @@ body {
 footer {
   margin-top: 30px;
   text-align: center;
+}
+
+table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+}
+
+table td, #table th {
+  border: 1px solid #ddd;
+  padding: 4px;
+}
+
+table tr:nth-child(even){background-color: #fff;}
+
+table tr:hover {background-color: #ddd;}
+
+table th {
+  padding: 4px;
+  text-align: center;
+  background-color: rgb(6, 92, 95);
+  color: white;
+}
+
+.error{
+  background-color: #d9534f;
+  color: white;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
 }
